melhorias na engine do modal

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,13 +5,13 @@
   <button (click)="openModal('test-modal-2')">Open Modal 2</button>
 </div>
 
-<app-modal name="test-modal-1">
+<app-modal name="test-modal-1" [size]="{ width: '70px', height: '40px' }">
   <h1>Modal 1</h1>
   <p>Bla bla bla: <input type="text" [(ngModel)]="bodyText" /></p>
   <button (click)="closeModal('test-modal-1');">Close</button>
 </app-modal>
 
-<app-modal name="test-modal-2">
+<app-modal name="test-modal-2" [size]="{ width: '90px' }">
   <h1 style="height:1000px">Modal 2</h1>
   <p>Bla bla bla: <input type="text" [(ngModel)]="bodyText" /></p>
   <button (click)="closeModal('test-modal-2');">Close</button>
