--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal">
-  <div class="modal-body">
+  <div class="modal-body" id="body">
       <ng-content></ng-content>
   </div>
 </div>
