--- a/src/app/modal/modal.component.scss
+++ b/src/app/modal/modal.component.scss
@@ -1,14 +1,18 @@
+$width-size: var(--width-size);
+$height-size: var(--height-size);
+
 :host {
   /* modals are hidden by default */
   display: none;
 
   .modal {
-    /* modal container fixed across whole screen */
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    width: $width-size;
+    height: $height-size;
 
     /* z-index must be higher than .modal-background */
     z-index: 1000;
@@ -17,16 +21,14 @@
     overflow: auto;
 
     .modal-body {
-      padding: 20px;
-      background: #fff;
-
       /* margin exposes part of the modal background */
       margin: 40px;
+      background-color: #fff;
+      box-shadow: 0 2px 20px 0 black;
     }
   }
 
   .modal-background {
-    /* modal background fixed across whole screen */
     position: fixed;
     top: 0;
     right: 0;
@@ -34,8 +36,8 @@
     left: 0;
 
     /* semi-transparent black  */
-    background-color: #000;
-    opacity: 0.75;
+    background-color: #9c9c9c;
+    opacity: 0.6;
 
     /* z-index must be below .modal and above everything else  */
     z-index: 900;
@@ -43,6 +45,20 @@
 }
 
 body.modal-open {
-  /* body overflow is hidden to hide main scrollbar when modal window is open */
+  /* block scrollbar when modal window is open */
   overflow: hidden;
+}
+
+@media screen and (max-width: 1024px) {
+  :host {
+    overflow-y: auto;
+    height: 100vh;
+    .modal {
+      max-width: 96% !important;
+      width: 96%;
+      margin-right: 2%;
+      margin-left: 2%;
+      margin-top: 2%;
+    }
+  }
 }
