enhancement size controls

--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,5 +1,5 @@
-<div class="modal">
-  <div class="modal-body" id="body">
+<div class="modal" id="modal-template">
+  <div class="modal-body">
       <ng-content></ng-content>
   </div>
 </div>
